<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/navigation_home"/>

        <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/navigation_favorite"/>

        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/navigation_subheader">
            <menu>
                <group
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/navigation_record"
                        android:icon="@drawable/ic_watch_later_white_24dp"
                        android:title="@string/navigation_record"/>

                    <item
                        android:id="@+id/navigation_about"
                        android:icon="@drawable/ic_info_outline_white_24dp"
                        android:title="@string/navigation_about"/>
                </group>

            </menu>

        </item>

        <!--<item
            android:id="@+id/navigation_record"
            android:icon="@drawable/ic_watch_later_white_24dp"
            android:title="@string/navigation_record"/>

        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_info_outline_white_24dp"
            android:title="@string/navigation_about"/>-->

    </group>
</menu>